[gd_scene load_steps=116 format=2]

[ext_resource path="res://Assets/Player/idle sheet-Sheet15.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/itch run-Sheet sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/itch jump sheet-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/itch light atk sheet-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/idle sheet-Sheet17.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/idle sheet-Sheet13.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/idle sheet-Sheet16.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/idle sheet-Sheet6.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/idle sheet-Sheet7.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/idle sheet-Sheet1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/idle sheet-Sheet2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/idle sheet-Sheet4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/idle sheet-Sheet12.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/idle sheet-Sheet18.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/idle sheet-Sheet11.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/idle sheet-Sheet9.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/idle sheet-Sheet10.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/idle sheet-Sheet3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/idle sheet-Sheet8.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/idle sheet-Sheet14.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/idle sheet-Sheet5.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/itch hurt 2 sheet-Sheet.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/archer_attack.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=25]
[ext_resource path="res://Assets/Sound/bow-string-releasing-slow-2.mp3" type="AudioStream" id=26]
[ext_resource path="res://Assets/Sound/sword_in_air.mp3" type="AudioStream" id=27]

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 24 )
region = Rect2( 896, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 24 )
region = Rect2( 784, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 24 )
region = Rect2( 672, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 24 )
region = Rect2( 560, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 24 )
region = Rect2( 448, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 24 )
region = Rect2( 336, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 24 )
region = Rect2( 224, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 24 )
region = Rect2( 112, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 112, 80 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 5 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 5 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 5 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 5 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 5 )
region = Rect2( 1680, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 5 )
region = Rect2( 1760, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 5 )
region = Rect2( 1840, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 5 )
region = Rect2( 1920, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 5 )
region = Rect2( 2000, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 23 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 23 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 23 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 23 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 23 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 23 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 1680, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 1760, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 1840, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "archer",
"speed": 8.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "attack",
"speed": 18.0
}, {
"frames": [  ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": true,
"name": "hit",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 22 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 16.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "jump",
"speed": 16.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "run",
"speed": 32.0
} ]

[sub_resource type="RectangleShape2D" id=90]
extents = Vector2( 10, 9.83392 )

[sub_resource type="RectangleShape2D" id=100]
extents = Vector2( 10, 15 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 15
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4 )
z_as_relative = false
frames = SubResource( 19 )
animation = "death"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 8 )
scale = Vector2( 0.781787, -1.4481 )
shape = SubResource( 90 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, 5 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -14, 5 )
rotation = -3.14159

[node name="MeleDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleDamageArea"]
position = Vector2( 11, 7 )
shape = SubResource( 100 )

[node name="Arrow" parent="." instance=ExtResource( 25 )]
visible = false

[node name="bow_prepare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
pitch_scale = 2.71

[node name="melee_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
pitch_scale = 1.27

[connection signal="body_entered" from="MeleDamageArea" to="." method="_on_MeleDamageArea_body_entered"]
[connection signal="body_exited" from="MeleDamageArea" to="." method="_on_MeleDamageArea_body_exited"]
